# internal/rest/controller/update_own_city_admin.go
@@ -24,7 +24,7 @@ func (a Service) UpdateMyCityAdmin(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	req, err := requests.UpdateOwnGov(r)
+	req, err := requests.UpdateOwnAdmin(r)
 	if err != nil {
 		a.log.WithError(err).Error("failed to parse update own active admin request")
 		ape.RenderErr(w, problems.BadRequest(err)...)
@@ -43,6 +43,9 @@ func (a Service) UpdateMyCityAdmin(w http.ResponseWriter, r *http.Request) {
 	params := admin.UpdateParams{}
 	if req.Data.Attributes.Label != nil {
 		params.Label = req.Data.Attributes.Label
+	}
+	if req.Data.Attributes.Position != nil {
+		params.Position = req.Data.Attributes.Position
 	}
 
 	res, err := a.domain.moder.UpdateOwn(r.Context(), initiator.ID, params)
