# resources/model_update_country_data.go
@@ -1,216 +1,0 @@
-/*
-cities-svc API
-
-API documentation for cities-svc
-
-API version: 0.1.0
-*/
-
-// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
-
-package resources
-
-import (
-	"encoding/json"
-	"github.com/google/uuid"
-	"bytes"
-	"fmt"
-)
-
-// checks if the UpdateCountryData type satisfies the MappedNullable interface at compile time
-var _ MappedNullable = &UpdateCountryData{}
-
-// UpdateCountryData struct for UpdateCountryData
-type UpdateCountryData struct {
-	// country id
-	Id uuid.UUID `json:"id"`
-	Type string `json:"type"`
-	Attributes UpdateCountryDataAttributes `json:"attributes"`
-}
-
-type _UpdateCountryData UpdateCountryData
-
-// NewUpdateCountryData instantiates a new UpdateCountryData object
-// This constructor will assign default values to properties that have it defined,
-// and makes sure properties required by API are set, but the set of arguments
-// will change when the set of required properties is changed
-func NewUpdateCountryData(id uuid.UUID, type_ string, attributes UpdateCountryDataAttributes) *UpdateCountryData {
-	this := UpdateCountryData{}
-	this.Id = id
-	this.Type = type_
-	this.Attributes = attributes
-	return &this
-}
-
-// NewUpdateCountryDataWithDefaults instantiates a new UpdateCountryData object
-// This constructor will only assign default values to properties that have it defined,
-// but it doesn't guarantee that properties required by API are set
-func NewUpdateCountryDataWithDefaults() *UpdateCountryData {
-	this := UpdateCountryData{}
-	return &this
-}
-
-// GetId returns the Id field value
-func (o *UpdateCountryData) GetId() uuid.UUID {
-	if o == nil {
-		var ret uuid.UUID
-		return ret
-	}
-
-	return o.Id
-}
-
-// GetIdOk returns a tuple with the Id field value
-// and a boolean to check if the value has been set.
-func (o *UpdateCountryData) GetIdOk() (*uuid.UUID, bool) {
-	if o == nil {
-		return nil, false
-	}
-	return &o.Id, true
-}
-
-// SetId sets field value
-func (o *UpdateCountryData) SetId(v uuid.UUID) {
-	o.Id = v
-}
-
-// GetType returns the Type field value
-func (o *UpdateCountryData) GetType() string {
-	if o == nil {
-		var ret string
-		return ret
-	}
-
-	return o.Type
-}
-
-// GetTypeOk returns a tuple with the Type field value
-// and a boolean to check if the value has been set.
-func (o *UpdateCountryData) GetTypeOk() (*string, bool) {
-	if o == nil {
-		return nil, false
-	}
-	return &o.Type, true
-}
-
-// SetType sets field value
-func (o *UpdateCountryData) SetType(v string) {
-	o.Type = v
-}
-
-// GetAttributes returns the Attributes field value
-func (o *UpdateCountryData) GetAttributes() UpdateCountryDataAttributes {
-	if o == nil {
-		var ret UpdateCountryDataAttributes
-		return ret
-	}
-
-	return o.Attributes
-}
-
-// GetAttributesOk returns a tuple with the Attributes field value
-// and a boolean to check if the value has been set.
-func (o *UpdateCountryData) GetAttributesOk() (*UpdateCountryDataAttributes, bool) {
-	if o == nil {
-		return nil, false
-	}
-	return &o.Attributes, true
-}
-
-// SetAttributes sets field value
-func (o *UpdateCountryData) SetAttributes(v UpdateCountryDataAttributes) {
-	o.Attributes = v
-}
-
-func (o UpdateCountryData) MarshalJSON() ([]byte, error) {
-	toSerialize,err := o.ToMap()
-	if err != nil {
-		return []byte{}, err
-	}
-	return json.Marshal(toSerialize)
-}
-
-func (o UpdateCountryData) ToMap() (map[string]interface{}, error) {
-	toSerialize := map[string]interface{}{}
-	toSerialize["id"] = o.Id
-	toSerialize["type"] = o.Type
-	toSerialize["attributes"] = o.Attributes
-	return toSerialize, nil
-}
-
-func (o *UpdateCountryData) UnmarshalJSON(data []byte) (err error) {
-	// This validates that all required properties are included in the JSON object
-	// by unmarshalling the object into a generic map with string keys and checking
-	// that every required field exists as a key in the generic map.
-	requiredProperties := []string{
-		"id",
-		"type",
-		"attributes",
-	}
-
-	allProperties := make(map[string]interface{})
-
-	err = json.Unmarshal(data, &allProperties)
-
-	if err != nil {
-		return err;
-	}
-
-	for _, requiredProperty := range(requiredProperties) {
-		if _, exists := allProperties[requiredProperty]; !exists {
-			return fmt.Errorf("no value given for required property %v", requiredProperty)
-		}
-	}
-
-	varUpdateCountryData := _UpdateCountryData{}
-
-	decoder := json.NewDecoder(bytes.NewReader(data))
-	decoder.DisallowUnknownFields()
-	err = decoder.Decode(&varUpdateCountryData)
-
-	if err != nil {
-		return err
-	}
-
-	*o = UpdateCountryData(varUpdateCountryData)
-
-	return err
-}
-
-type NullableUpdateCountryData struct {
-	value *UpdateCountryData
-	isSet bool
-}
-
-func (v NullableUpdateCountryData) Get() *UpdateCountryData {
-	return v.value
-}
-
-func (v *NullableUpdateCountryData) Set(val *UpdateCountryData) {
-	v.value = val
-	v.isSet = true
-}
-
-func (v NullableUpdateCountryData) IsSet() bool {
-	return v.isSet
-}
-
-func (v *NullableUpdateCountryData) Unset() {
-	v.value = nil
-	v.isSet = false
-}
-
-func NewNullableUpdateCountryData(val *UpdateCountryData) *NullableUpdateCountryData {
-	return &NullableUpdateCountryData{value: val, isSet: true}
-}
-
-func (v NullableUpdateCountryData) MarshalJSON() ([]byte, error) {
-	return json.Marshal(v.value)
-}
-
-func (v *NullableUpdateCountryData) UnmarshalJSON(src []byte) error {
-	v.isSet = true
-	return json.Unmarshal(src, &v.value)
-}
-
-
