# resources/model_update_own_active_gov_data.go
@@ -1,216 +1,0 @@
-/*
-cities-svc API
-
-API documentation for cities-svc
-
-API version: 0.1.0
-*/
-
-// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
-
-package resources
-
-import (
-	"encoding/json"
-	"github.com/google/uuid"
-	"bytes"
-	"fmt"
-)
-
-// checks if the UpdateOwnActiveGovData type satisfies the MappedNullable interface at compile time
-var _ MappedNullable = &UpdateOwnActiveGovData{}
-
-// UpdateOwnActiveGovData struct for UpdateOwnActiveGovData
-type UpdateOwnActiveGovData struct {
-	// user id
-	Id uuid.UUID `json:"id"`
-	Type string `json:"type"`
-	Attributes UpdateOwnActiveGovDataAttributes `json:"attributes"`
-}
-
-type _UpdateOwnActiveGovData UpdateOwnActiveGovData
-
-// NewUpdateOwnActiveGovData instantiates a new UpdateOwnActiveGovData object
-// This constructor will assign default values to properties that have it defined,
-// and makes sure properties required by API are set, but the set of arguments
-// will change when the set of required properties is changed
-func NewUpdateOwnActiveGovData(id uuid.UUID, type_ string, attributes UpdateOwnActiveGovDataAttributes) *UpdateOwnActiveGovData {
-	this := UpdateOwnActiveGovData{}
-	this.Id = id
-	this.Type = type_
-	this.Attributes = attributes
-	return &this
-}
-
-// NewUpdateOwnActiveGovDataWithDefaults instantiates a new UpdateOwnActiveGovData object
-// This constructor will only assign default values to properties that have it defined,
-// but it doesn't guarantee that properties required by API are set
-func NewUpdateOwnActiveGovDataWithDefaults() *UpdateOwnActiveGovData {
-	this := UpdateOwnActiveGovData{}
-	return &this
-}
-
-// GetId returns the Id field value
-func (o *UpdateOwnActiveGovData) GetId() uuid.UUID {
-	if o == nil {
-		var ret uuid.UUID
-		return ret
-	}
-
-	return o.Id
-}
-
-// GetIdOk returns a tuple with the Id field value
-// and a boolean to check if the value has been set.
-func (o *UpdateOwnActiveGovData) GetIdOk() (*uuid.UUID, bool) {
-	if o == nil {
-		return nil, false
-	}
-	return &o.Id, true
-}
-
-// SetId sets field value
-func (o *UpdateOwnActiveGovData) SetId(v uuid.UUID) {
-	o.Id = v
-}
-
-// GetType returns the Type field value
-func (o *UpdateOwnActiveGovData) GetType() string {
-	if o == nil {
-		var ret string
-		return ret
-	}
-
-	return o.Type
-}
-
-// GetTypeOk returns a tuple with the Type field value
-// and a boolean to check if the value has been set.
-func (o *UpdateOwnActiveGovData) GetTypeOk() (*string, bool) {
-	if o == nil {
-		return nil, false
-	}
-	return &o.Type, true
-}
-
-// SetType sets field value
-func (o *UpdateOwnActiveGovData) SetType(v string) {
-	o.Type = v
-}
-
-// GetAttributes returns the Attributes field value
-func (o *UpdateOwnActiveGovData) GetAttributes() UpdateOwnActiveGovDataAttributes {
-	if o == nil {
-		var ret UpdateOwnActiveGovDataAttributes
-		return ret
-	}
-
-	return o.Attributes
-}
-
-// GetAttributesOk returns a tuple with the Attributes field value
-// and a boolean to check if the value has been set.
-func (o *UpdateOwnActiveGovData) GetAttributesOk() (*UpdateOwnActiveGovDataAttributes, bool) {
-	if o == nil {
-		return nil, false
-	}
-	return &o.Attributes, true
-}
-
-// SetAttributes sets field value
-func (o *UpdateOwnActiveGovData) SetAttributes(v UpdateOwnActiveGovDataAttributes) {
-	o.Attributes = v
-}
-
-func (o UpdateOwnActiveGovData) MarshalJSON() ([]byte, error) {
-	toSerialize,err := o.ToMap()
-	if err != nil {
-		return []byte{}, err
-	}
-	return json.Marshal(toSerialize)
-}
-
-func (o UpdateOwnActiveGovData) ToMap() (map[string]interface{}, error) {
-	toSerialize := map[string]interface{}{}
-	toSerialize["id"] = o.Id
-	toSerialize["type"] = o.Type
-	toSerialize["attributes"] = o.Attributes
-	return toSerialize, nil
-}
-
-func (o *UpdateOwnActiveGovData) UnmarshalJSON(data []byte) (err error) {
-	// This validates that all required properties are included in the JSON object
-	// by unmarshalling the object into a generic map with string keys and checking
-	// that every required field exists as a key in the generic map.
-	requiredProperties := []string{
-		"id",
-		"type",
-		"attributes",
-	}
-
-	allProperties := make(map[string]interface{})
-
-	err = json.Unmarshal(data, &allProperties)
-
-	if err != nil {
-		return err;
-	}
-
-	for _, requiredProperty := range(requiredProperties) {
-		if _, exists := allProperties[requiredProperty]; !exists {
-			return fmt.Errorf("no value given for required property %v", requiredProperty)
-		}
-	}
-
-	varUpdateOwnActiveGovData := _UpdateOwnActiveGovData{}
-
-	decoder := json.NewDecoder(bytes.NewReader(data))
-	decoder.DisallowUnknownFields()
-	err = decoder.Decode(&varUpdateOwnActiveGovData)
-
-	if err != nil {
-		return err
-	}
-
-	*o = UpdateOwnActiveGovData(varUpdateOwnActiveGovData)
-
-	return err
-}
-
-type NullableUpdateOwnActiveGovData struct {
-	value *UpdateOwnActiveGovData
-	isSet bool
-}
-
-func (v NullableUpdateOwnActiveGovData) Get() *UpdateOwnActiveGovData {
-	return v.value
-}
-
-func (v *NullableUpdateOwnActiveGovData) Set(val *UpdateOwnActiveGovData) {
-	v.value = val
-	v.isSet = true
-}
-
-func (v NullableUpdateOwnActiveGovData) IsSet() bool {
-	return v.isSet
-}
-
-func (v *NullableUpdateOwnActiveGovData) Unset() {
-	v.value = nil
-	v.isSet = false
-}
-
-func NewNullableUpdateOwnActiveGovData(val *UpdateOwnActiveGovData) *NullableUpdateOwnActiveGovData {
-	return &NullableUpdateOwnActiveGovData{value: val, isSet: true}
-}
-
-func (v NullableUpdateOwnActiveGovData) MarshalJSON() ([]byte, error) {
-	return json.Marshal(v.value)
-}
-
-func (v *NullableUpdateOwnActiveGovData) UnmarshalJSON(src []byte) error {
-	v.isSet = true
-	return json.Unmarshal(src, &v.value)
-}
-
-
