# resources/model_update_own_active_gov_data_attributes.go
@@ -1,127 +1,0 @@
-/*
-cities-svc API
-
-API documentation for cities-svc
-
-API version: 0.1.0
-*/
-
-// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
-
-package resources
-
-import (
-	"encoding/json"
-)
-
-// checks if the UpdateOwnActiveGovDataAttributes type satisfies the MappedNullable interface at compile time
-var _ MappedNullable = &UpdateOwnActiveGovDataAttributes{}
-
-// UpdateOwnActiveGovDataAttributes struct for UpdateOwnActiveGovDataAttributes
-type UpdateOwnActiveGovDataAttributes struct {
-	// optional label for the user in this city
-	Label *string `json:"label,omitempty"`
-}
-
-// NewUpdateOwnActiveGovDataAttributes instantiates a new UpdateOwnActiveGovDataAttributes object
-// This constructor will assign default values to properties that have it defined,
-// and makes sure properties required by API are set, but the set of arguments
-// will change when the set of required properties is changed
-func NewUpdateOwnActiveGovDataAttributes() *UpdateOwnActiveGovDataAttributes {
-	this := UpdateOwnActiveGovDataAttributes{}
-	return &this
-}
-
-// NewUpdateOwnActiveGovDataAttributesWithDefaults instantiates a new UpdateOwnActiveGovDataAttributes object
-// This constructor will only assign default values to properties that have it defined,
-// but it doesn't guarantee that properties required by API are set
-func NewUpdateOwnActiveGovDataAttributesWithDefaults() *UpdateOwnActiveGovDataAttributes {
-	this := UpdateOwnActiveGovDataAttributes{}
-	return &this
-}
-
-// GetLabel returns the Label field value if set, zero value otherwise.
-func (o *UpdateOwnActiveGovDataAttributes) GetLabel() string {
-	if o == nil || IsNil(o.Label) {
-		var ret string
-		return ret
-	}
-	return *o.Label
-}
-
-// GetLabelOk returns a tuple with the Label field value if set, nil otherwise
-// and a boolean to check if the value has been set.
-func (o *UpdateOwnActiveGovDataAttributes) GetLabelOk() (*string, bool) {
-	if o == nil || IsNil(o.Label) {
-		return nil, false
-	}
-	return o.Label, true
-}
-
-// HasLabel returns a boolean if a field has been set.
-func (o *UpdateOwnActiveGovDataAttributes) HasLabel() bool {
-	if o != nil && !IsNil(o.Label) {
-		return true
-	}
-
-	return false
-}
-
-// SetLabel gets a reference to the given string and assigns it to the Label field.
-func (o *UpdateOwnActiveGovDataAttributes) SetLabel(v string) {
-	o.Label = &v
-}
-
-func (o UpdateOwnActiveGovDataAttributes) MarshalJSON() ([]byte, error) {
-	toSerialize,err := o.ToMap()
-	if err != nil {
-		return []byte{}, err
-	}
-	return json.Marshal(toSerialize)
-}
-
-func (o UpdateOwnActiveGovDataAttributes) ToMap() (map[string]interface{}, error) {
-	toSerialize := map[string]interface{}{}
-	if !IsNil(o.Label) {
-		toSerialize["label"] = o.Label
-	}
-	return toSerialize, nil
-}
-
-type NullableUpdateOwnActiveGovDataAttributes struct {
-	value *UpdateOwnActiveGovDataAttributes
-	isSet bool
-}
-
-func (v NullableUpdateOwnActiveGovDataAttributes) Get() *UpdateOwnActiveGovDataAttributes {
-	return v.value
-}
-
-func (v *NullableUpdateOwnActiveGovDataAttributes) Set(val *UpdateOwnActiveGovDataAttributes) {
-	v.value = val
-	v.isSet = true
-}
-
-func (v NullableUpdateOwnActiveGovDataAttributes) IsSet() bool {
-	return v.isSet
-}
-
-func (v *NullableUpdateOwnActiveGovDataAttributes) Unset() {
-	v.value = nil
-	v.isSet = false
-}
-
-func NewNullableUpdateOwnActiveGovDataAttributes(val *UpdateOwnActiveGovDataAttributes) *NullableUpdateOwnActiveGovDataAttributes {
-	return &NullableUpdateOwnActiveGovDataAttributes{value: val, isSet: true}
-}
-
-func (v NullableUpdateOwnActiveGovDataAttributes) MarshalJSON() ([]byte, error) {
-	return json.Marshal(v.value)
-}
-
-func (v *NullableUpdateOwnActiveGovDataAttributes) UnmarshalJSON(src []byte) error {
-	v.isSet = true
-	return json.Unmarshal(src, &v.value)
-}
-
-
